objects/Contact.object
<CustomObject><fields>
        <fullName>ActiveLiveAgentUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ActiveLiveAgentUser</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Activity_Indicator__c</fullName>
        <formula>IMAGE('/servlet/servlet.FileDownload?file='&amp; IF (Total_of_Activities__c &gt; 0, '01541000001Qwum', '01541000001Qwun'),'',22,22) &amp;""&amp;
IMAGE('/servlet/servlet.FileDownload?file='&amp; IF (Total_of_Activities__c &gt; 3, '01541000001Qwum', '01541000001Qwun'),'',22,22) &amp;""&amp;
IMAGE('/servlet/servlet.FileDownload?file='&amp; IF (Total_of_Activities__c &gt; 6, '01541000001Qwum', '01541000001Qwun'),'',22,22) &amp;""&amp; 
IMAGE('/servlet/servlet.FileDownload?file='&amp; IF (Total_of_Activities__c &gt; 9, '01541000001Qwum', '01541000001Qwun'),'',22,22) &amp;""&amp;
IMAGE('/servlet/servlet.FileDownload?file='&amp; IF (Total_of_Activities__c &gt; 12, '01541000001Qwum', '01541000001Qwun'),'',22,22)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Indicator</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Activity_Indicator_partner__c</fullName>
        <formula>IF( Total_of_Activities__c &lt; 5, IMAGE("https://na13.salesforce.com/servlet/servlet.FileDownload?file=01541000001Qwv4&amp;oid=00D41000001MYfZ","1 Star",20,100), 
IF(Total_of_Activities__c &lt; 10, IMAGE("https://na13.salesforce.com/servlet/servlet.FileDownload?file=01541000001Qwv5&amp;oid=00D41000001MYfZ", "3 Stars",20,100), 
IMAGE("https://na13.salesforce.com/servlet/servlet.FileDownload?file= 01541000001Qwv6&amp;oid=00D41000001MYfZ", "5 Stars",20,100)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Indicator</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Certification_Level__c</fullName>
        <description>Partner Contact certification level, used on the Partner Contact layout.</description>
        <label>Certification Level</label>
        <picklist>
            <picklistValues>
                <fullName>Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architect</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Contact_Location__c</fullName>
        <formula>IMAGE(

"https://maps.googleapis.com/maps/api/staticmap?center=" +  MailingStreet + ","  + MailingCity + "," +  MailingState + "&amp;zoom=13&amp;size=650x250&amp;markers=color:red|" +  MailingStreet + ","  + MailingCity + "," +  MailingState + "&amp;sensor=false"





, "no map available", 250, 650)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Location</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Days_Since_Last_Activity__c</fullName>
        <formula>IF(ISNULL(LastActivityDate)=false, TODAY() - LastActivityDate, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is used to consistently import data to a version of the SDO and translate data into other languages.</inlineHelpText>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>FB_Id_for_Identity__c</fullName>
        <description>This field is used for the FB auth provider demo.</description>
        <label>FB Id for Identity</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Facebook_Persona_ID__c</fullName>
        <label>Facebook Persona ID</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Facebook_Picture__c</fullName>
        <label>Facebook Picture</label>
        <type>Url</type>
    </fields><fields>
        <fullName>Facebook_Profile_Picture__c</fullName>
        <formula>IMAGE( Facebook_Picture__c,'' )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facebook Profile Picture</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Klout_Score__c</fullName>
        <defaultValue>76</defaultValue>
        <label>Klout Score</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Number_of_Friends__c</fullName>
        <label>Number of Friends</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Open_Address_in_Google_Maps__c</fullName>
        <formula>HYPERLINK("http://maps.google.com?q=" &amp;  MailingStreet  &amp; "%20" &amp;  MailingCity  &amp; "%20" &amp;  MailingState  &amp; "%20" &amp;  MailingPostalCode ,IMAGE("/servlet/servlet.FileDownload?file=01541000001Qwuo", "Map Address in Google"))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Address in Google Maps</label>
        <type>Text</type>
    </fields><fields>
        <fullName>SSP_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SSP User</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>SlickSidebar_AccountAddress__c</fullName>
        <formula>if(LEN(Account.BillingStreet)&gt;0, Account.BillingStreet&amp; " " , "" ) &amp; BR() &amp;
if(LEN(Account.BillingCity)&gt;0, Account.BillingCity&amp; ", " , "" )&amp;
if(LEN(Account.BillingState)&gt;0, Account.BillingState&amp; " " , "" )&amp;
if(LEN(Account.BillingPostalCode)&gt;0, Account.BillingPostalCode,"") &amp; BR() &amp;
If(LEN( Account.BillingCountry) &gt;0, Account.BillingCountry,"")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Address</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Total_of_Activities__c</fullName>
        <description>Used as part of Relationship_Indicator__c formula field.</description>
        <inlineHelpText>for Activity Indicator field. &lt;5 = 1 Star, &lt;10 = 3 Stars, &gt;10 = 5 Stars</inlineHelpText>
        <label>Total # of Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Twitter_Persona_ID__c</fullName>
        <label>Twitter Persona ID</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>URLsrc__c</fullName>
        <description>This is used by email templates to determine the instance that the Company Logo image is hosted on.  It's required so that the image will render correctly when the email is received by a customer.  The value of this field is the same for every Contact.</description>
        <formula>LEFT ($Api.Enterprise_Server_URL_350, 
FIND("/",$Api.Enterprise_Server_URL_350, 
FIND(".",$Api.Enterprise_Server_URL_350))-1 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URLsrc</label>
        <type>Text</type>
    </fields><compactLayoutAssignment>Contact_Layout</compactLayoutAssignment><enableEnhancedLookup>true</enableEnhancedLookup><enableFeeds>true</enableFeeds><enableHistory>true</enableHistory><externalSharingModel>ControlledByParent</externalSharingModel><recordTypeTrackFeedHistory>false</recordTypeTrackFeedHistory><recordTypeTrackHistory>false</recordTypeTrackHistory><sharingModel>ControlledByParent</sharingModel><listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.DEPARTMENT</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.IS_PERSON_ACCOUNT</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Contacts</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews><listViews>
        <fullName>CLevelContacts</fullName>
        <booleanFilter>1 or 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.TITLE</field>
            <operation>startsWith</operation>
            <value>CEO,CFO,CIO,CTO,CMO</value>
        </filters>
        <filters>
            <field>CONTACT.TITLE</field>
            <operation>contains</operation>
            <value>Chief</value>
        </filters>
        <label>C-Level Contacts</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <allPartnerUsers></allPartnerUsers>
        </sharedTo>
    </listViews><listViews>
        <fullName>My_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.DEPARTMENT</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE1</columns>
        <filterScope>Mine</filterScope>
        <label>*My Contacts</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <allPartnerUsers></allPartnerUsers>
        </sharedTo>
    </listViews><listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews><listViews>
        <fullName>Pardot_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>pi__score__c</columns>
        <columns>pi__grade__c</columns>
        <columns>pi__last_activity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Pardot_Contact</value>
        </filters>
        <label>Pardot Contacts</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews><listViews>
        <fullName>VPContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.DEPARTMENT</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.TITLE</field>
            <operation>startsWith</operation>
            <value>Vice,VP</value>
        </filters>
        <label>VP-Level Contacts</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <allPartnerUsers></allPartnerUsers>
        </sharedTo>
    </listViews><recordTypes>
        <fullName>Customer</fullName>
        <active>true</active>
        <description>For contacts who are customers.</description>
        <label>Customer</label>
    </recordTypes><recordTypes>
        <fullName>Pardot_Contact</fullName>
        <active>true</active>
        <description>Demonstrates the capabilities of Pardot.</description>
        <label>Pardot Contact</label>
    </recordTypes><recordTypes>
        <fullName>Partner</fullName>
        <active>true</active>
        <description>For contacts who are partners, distributors or resellers.</description>
        <label>Partner</label>
    </recordTypes></CustomObject>